# slimg

./: BUILD_CONFIGURATION_IN_WINDOWS.md  Cargo.toml
.cargo/: config.toml
crates/slimg-core/: Cargo.toml
crates/slimg-core/src/codec/: avif.rs
mig/: DESIGN.md  README.md  REQUIREMENTS.md  SCREEN_LAYOUT.md  index.html  package.json
mig/ref/: slimg-README.ko.md  slimg-usage.ko.md
mig/src/: App.vue  vite-env.d.ts
mig/src-tauri/: Cargo.toml  tauri.conf.json
mig/src-tauri/src/: lib.rs  main.rs
mig/src/components/: ImageMetaBoxContent.vue
