[package]
name = "slimg-core"
version = "0.5.1"
edition = "2024"
license = "MIT"
description = "Image optimization library — encode, decode, convert, resize with MozJPEG, OxiPNG, WebP, AVIF, and QOI"
repository = "https://github.com/clroot/slimg"
homepage = "https://github.com/clroot/slimg"
readme = "README.md"
keywords = ["image", "optimization", "compression", "webp", "avif"]
categories = ["multimedia::images", "encoding"]

[dependencies]
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "tiff", "bmp"] }
libjxl-sys = { version = "0.1", path = "../libjxl-sys", package = "slimg-libjxl-sys" }
mozjpeg = "0.10"
oxipng = { version = "10", default-features = false, features = ["parallel", "zopfli"] }
imgref = "1"
rapid-qoi = "0.6"
# ravif = "0.13" (dav1d-sys 의존성 전파로 인해 일시적 비활성화)
rgb = "0.8"
thiserror = "2"
webp = { version = "0.3", default-features = false }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "codec_bench"
harness = false

[[bench]]
name = "pipeline_bench"
harness = false
