[package]
name = "image-optimization-tool"
version = "0.1.0"
description = "Image Optimization Tool"
authors = ["jinholee275"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "img_mig_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "tiff", "bmp"] }
weezl = "0.1"
exif = { package = "kamadak-exif", version = "0.6" }
rayon = "1"
slimg-core = { path = "../../crates/slimg-core" }
img-parts = "0.3"
bytes = "1"
little_exif = "0.6.23"
crossbeam-channel = "0.5"
wgpu = "0.19"
pollster = "0.3"
img_hash = "3"
dssim = "3"
rgb = "0.8"
